<resources>
    <string name="app_name">GoodBook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_post">My Post</string>
    <string name="notification">Thông báo</string>
    <string name="profile">Tôi</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_authen_password">Xác thực mật khẩu</string>

    <string name="notification1">
        <b>Bùi Duy Tuấn</b> đã thích bài viết của bạn
    </string>
    <string name="notificatiion2">
        <b>Tana Quỳnh</b> đã bình luận về bài viết của bạn
    </string>
    <string name="notification3">
        <b>Heart Vũ</b> đã thích bình luận của bạn
    </string>
    <string name="notification4">
        <b>Chan Chan</b> đã thích bài viết của bạn
    </string>
    <string name="notification5">
        <b>Bùi Duy Tuấn</b> đã thích bài viết của bạn
    </string>
    <string name="notification6">
        <b>Bùi Duy Tuấn</b> đã thích bài viết của bạn
    </string>
    <string name="notification7">
        <b>Bùi Duy Tuấn</b> đã thích bài viết của bạn
    </string>
    <string name="notification8">
        <b>Bùi Duy Tuấn</b> đã thích bài viết của bạn
    </string>
    <string name="notification9">
        <b>Bùi Duy Tuấn</b> đã thích bài viết của bạn
    </string>
    <string name="notification10">
        <b>Bùi Duy Tuấn</b> đã thích bài viết của bạn
    </string>

    <string name="post_content">
        Cuốn sách được tác giả Dale Carnegie ra mắt lần đầu vào năm 1937, tuy nhiên không vì thế mà nội dung của cuốn sách trở nên lỗi thời, cho đến tận bây giờ, những bài học và triết lý trong sách vẫn còn được áp dụng rất nhiều trong cuộc sống ngày nay, đơn giản vì nó được tác giả đúc kết qua những nghiên cứu và khám phá về ngành tâm lý học của con người
    </string>

    <string name="banner">banner</string>
    <string name="search">Tìm kiếm</string>
    <string name="menu">menu</string>
    <string name="logo1">Good</string>
    <string name="logo2">Book</string>
    <string name="content_description_icon">icon</string>

    <string name="recently">Gần đây</string>
    <string name="book_harry_potter_and_the_sorcerers_stone">book Harry Potter and the sorcerers stone</string>
    <string name="star">star</string>
    <string name="user_avt">user avt</string>
    <string name="icon_saved">icon_saved</string>
    <string name="logout">Đăng xuất</string>
    <string name="search_result_title">Kết quả tìm kiếm</string>

    <string name="avatar">Avatar</string>
    <string name="name">Nguyễn Văn A</string>
    <string name="password_authenticate">Xác thực mật khẩu</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="forget_pass">Quên mật khẩu?</string>
    <string name="reset_pass">Đặt lại mật khẩu</string>
    <string name="new_pass">Nhập mật khẩu mới</string>
    <string name="next">Tiếp tục</string>
    <string name="confirm_pass">Xác nhận mật khẩu</string>
    <string name="authenticate_user">Xác thực người dùng</string>
    <string name="info_account">Thông tin tài khoản</string>
    <string name="text_enter_your_phone">Vui lòng nhập số điện thoại mới để nhận mã OTP</string>
    <string name="text_enter_authen_code_send_to_phone">Nhận mã xác thực vừa được gửi đến số điện thoại</string>
    <string name="save">Lưu</string>
    <string name="saved">Đã lưu</string>


</resources>