<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_menu_item"
        android:title="@string/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        />
    <item
        android:id="@+id/myPost_menu_item"
        android:title="@string/my_post"
        android:enabled="true"
        android:icon="@drawable/ic_my_post"/>
    <item
        android:id="@+id/notification_menu_item"
        android:title="@string/notification"
        android:enabled="true"
        android:icon="@drawable/ic_notification" />
    <item
        android:id="@+id/profile_menu_item"
        android:title="@string/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"/>
</menu>