<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <ImageView
        android:id="@+id/image_banner2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_textField"
        app:srcCompat="@drawable/undraw_searching_re_3ra9" />

    <TextView
        android:id="@+id/title_more_detail"
        style="@style/list_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_result_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_banner2" />

    <ImageView
        android:id="@+id/image_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/menu"
        android:src="@drawable/ic_menu_24"
        app:layout_constraintEnd_toStartOf="@+id/search_textField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_textField"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/search"
        app:layout_constraintEnd_toStartOf="@+id/image_notification"
        app:layout_constraintStart_toEndOf="@+id/image_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconContentDescription="@string/content_description_icon"
        app:startIconDrawable="@drawable/ic_search">


        <com.google.android.material.textfield.TextInputEditText
            style="@style/font_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_border"
            android:backgroundTint="@color/white"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_notification"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/notification"
        android:src="@drawable/ic_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_textField"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="485dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/search_textField"
        app:layout_constraintTop_toBottomOf="@+id/title_more_detail"
        app:spanCount="3"
        tools:itemCount="12"
        tools:listitem="@layout/book_item" />

</androidx.constraintlayout.widget.ConstraintLayout>