<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

<!--    <TextView-->
<!--        android:id="@+id/text_home1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="80dp"-->
<!--        android:fontFamily="@font/poppins"-->
<!--        android:text="@string/hello_blank_fragment"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/image_banner1"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner1"></ImageView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="87dp"
        android:layout_height="41dp"
        android:layout_marginStart="88dp"
        android:style="@style/logo_text1"
        android:text="@string/logo1"
        app:layout_constraintBottom_toBottomOf="@+id/image_banner1"
        app:layout_constraintStart_toStartOf="@+id/image_banner1"
        app:layout_constraintTop_toTopOf="@+id/image_banner1"
        app:layout_constraintVertical_bias="0.374" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="87dp"
        android:layout_height="41dp"
        android:layout_marginEnd="76dp"
        android:style="@style/logo_text2"
        android:text="@string/logo2"
        app:layout_constraintBottom_toBottomOf="@+id/image_banner1"
        app:layout_constraintEnd_toEndOf="@+id/image_banner1"
        app:layout_constraintTop_toTopOf="@+id/image_banner1"
        app:layout_constraintVertical_bias="0.374" />

    <ImageView
        android:id="@+id/image_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/menu"
        android:src="@drawable/ic_menu_24"
        app:layout_constraintEnd_toStartOf="@+id/search_textField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_textField"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:hint="@string/search"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_menu"
        app:layout_constraintEnd_toStartOf="@+id/image_notification">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_notification"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/notification"
        android:src="@drawable/ic_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_textField"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/horizontal_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="455dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_banner1"
        tools:layout_editor_absoluteX="-16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>