<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.PasswordAuthentication">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_height="105dp"
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/shape2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            app:srcCompat="@drawable/ic_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F4F0F5"
            android:textSize="28sp"
            android:text="@string/password_authenticate"
            android:paddingLeft="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#8E7D7D"
            android:layout_marginTop="40dp"
            android:theme="@style/margin_25"
            android:textSize="17sp"
            android:gravity="center"
            android:text="Để giữ an toàn cho tài khoản của bạn, vui lòng xác minh danh tính bằng cách nhập mật khẩu." />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_authen"
            android:layout_width="match_parent"
            android:theme="@style/margin_25"
            android:layout_height="50dp"
            android:hint="@string/current_password"
            android:layout_marginTop="10dp">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:background="@drawable/edittext_bottom_border"
                android:textColorHint="#8E7D7D"
                android:textSize="20dp"
                android:gravity="center"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_marginTop="15dp"
            android:layout_height="53dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/next" />

        <TextView
            android:id="@+id/forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#1B0B78"
            android:textSize="16sp"
            android:text="@string/forget_pass" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>