<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/firsthomepage"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/image_banner1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner1"/>

    <TextView
        android:id="@+id/textView"
        style="@style/logo_text1"
        android:layout_width="87dp"
        android:layout_height="41dp"
        android:layout_marginStart="88dp"
        android:text="@string/logo1"
        app:layout_constraintBottom_toBottomOf="@+id/image_banner1"
        app:layout_constraintStart_toStartOf="@+id/image_banner1"
        app:layout_constraintTop_toTopOf="@+id/image_banner1"
        app:layout_constraintVertical_bias="0.374" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="87dp"
        android:layout_height="41dp"
        android:layout_marginEnd="76dp"
        style="@style/logo_text2"
        android:text="@string/logo2"
        app:layout_constraintBottom_toBottomOf="@+id/image_banner1"
        app:layout_constraintEnd_toEndOf="@+id/image_banner1"
        app:layout_constraintTop_toTopOf="@+id/image_banner1"
        app:layout_constraintVertical_bias="0.374" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_banner1"
        app:layout_constraintVertical_bias="1.0"
        tools:itemCount="3"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/home_book_categories_item" />

</androidx.constraintlayout.widget.ConstraintLayout>